# wayclicker

./: Cargo.toml  README.md  flake.nix  test_packet.json
gtk_client/: Cargo.toml
gtk_client/src/: main.rs
lib/: Cargo.toml
lib/src/: lib.rs
server/: Cargo.toml
server/src/: cli.rs  command.rs  hotkey.rs  main.rs  server.rs
slint_client/: Cargo.toml  build.rs  ui.slint
slint_client/src/: main.rs
slint_client/ui/: main.slint
src/: cli.rs  gui.rs  main.rs  server.rs
