[workspace.package]
name = "wayclicker"
version = "1.3.2"
edition = "2024"
description = "Rust-based autoclicker for wayland"
license = "GPL-3.0"
repository = "https://github.com/Shringe/wayclicker/"
homepage = "https://github.com/Shringe/wayclicker/"

[workspace]
members = [
  "server",
  "gtk_client",
  "slint_client", "lib",
]
resolver = "2"

[workspace.dependencies]
env_logger = "0.11.8"
log = "0.4.28"
# Evdev is used for detecting keyboard input globally (hotkey)
evdev = "0.13.1"
# Uinput is used for sending click input
uinput = "0.1.3"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
