[package]
name = "lib"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.48.0", features = ["io-util", "net"] }
