[package]
name = "server"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
evdev.workspace = true
uinput.workspace = true
log.workspace = true
env_logger.workspace = true
clap = { version = "4.5.51", features = ["derive"] }
tokio = { version = "1.48.0", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
