[package]
name = "slint_client"
build = "build.rs"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
evdev.workspace = true
uinput.workspace = true
log.workspace = true
env_logger.workspace = true
slint = { version = "1.14", features = ["backend-qt"] }
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }

[build-dependencies]
slint-build = "1.14"
