[package]
name = "slint_client"
build = "build.rs"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
evdev.workspace = true
uinput.workspace = true
log.workspace = true
env_logger.workspace = true
slint = { version = "1.14", features = ["backend-qt", "log", "compat-1-2", "std"], default-features = false }
serde.workspace = true
serde_json.workspace = true

[build-dependencies]
slint-build = "1.14"
